--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
 		"nikic/php-parser": "^4.0",
 		"phpdocumentor/reflection-docblock": "^4.3",
 		"psr/container": "^1.0",
+		"psr/event-dispatcher": "^0.7.0",
 		"psr/http-message": "~1.0",
 		"psr/http-server-middleware": "^1.0",
 		"psr/log": "~1.0.0",
